2008-05-25 Chris Morley
	
	windows-vc2005/examples: new folder with an example project
	for OBF build. Will replace /template.

2008-05-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Setup(), delete TorsionData before using 
	FOR_TORSION_OF_MOL. (fixed #1954233)

	* windows-vc2005/OBCommonFormats/OBCommonFormats.vcproj: Correct
	location for obmolecformat.cpp

2005-05-24  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/java/README: Updated instructions for using Java bindings on
	Linux

2008-05-23  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* windows-vc2005/openbabel.sln: remove non-existing OBPython and test, 
	add template.

	* windows-vc2005/OpenBabelDLL/OpenBabelDLL.vcproj: move obmolecformats 
	from formats to sources.

	* windows-vc2005/template/*.*: Example of a C++ program using openbabel.

2005-05-23  Marcus D. Hanwell  <marcus@cryos.org>

	* include/openbabel/obconversion.h: Removed extra qualification on
	OpenInAndOutFiles which broke compilation here.

2008-05-23 Chris Morley

	* include/openbabel/obconversion.h, src/obconversion.cpp:
	Add OBConversion::OpenInAndOutFiles to aid scripting

2008-05-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/mol.cpp: SetTorsion(), move j=*i out of this for loop:
	for (i = atom.begin(), j = *i; ... ; i++, j = *i)
	This was causing weird results in windows (MSVC2005). Thanks 
	to Noel for reporting the bug, this also fixes #1954233 I believe.

2008-05-23 Chris Morley

	* src/formats/xml/cmlformat.cpp: Applied Jean Brefort's patch to fix
	leading spaces on atom refs bug #1965086
	

2005-05-23  Noel O'Boyle  <baoilleach@gmail.com>

	* Pybel: minor fix to test suite for running outside cinfony

2005-05-23  Noel O'Boyle  <baoilleach@gmail.com>

	* Pybel: Synching with cinfony, and getting ready for release as 1.3

2008-05-22 Chris Morley

	* data/atomtyp.txt: remove
	  IMPVAL  [N^2-,N^3-]		2
	and add
	  IMPVAL	[N-]			2